Add clear database handler; add use of transactions in some queries
